examples/negative/lack_semicolon.nv
fn main() {
    let x : int = 1
    return;
}